feat: blockchain module and cleanup dtos
