# api/src/app.module.ts
@@ -2,10 +2,11 @@ import { Module } from '@nestjs/common';
 import { AppController } from './app.controller';
 import { AppService } from './app.service';
 import { ConfigModule } from './config/config.module';
+import { BlockchainModule } from 'src/blockchain/blockchain.module';
 
 @Module({
-  imports: [ConfigModule],
-  controllers: [AppController],
-  providers: [AppService],
+	imports: [ConfigModule, BlockchainModule],
+	controllers: [AppController],
+	providers: [AppService],
 })
 export class AppModule {}
