# api/swagger.json
@@ -20,15 +20,8 @@
         "operationId": "ConfigController_getConfig",
         "parameters": [],
         "responses": {
-          "default": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ConfigDto"
-                }
-              }
-            }
+          "200": {
+            "description": ""
           }
         },
         "summary": "Get current configuration",
@@ -50,38 +43,11 @@
           }
         },
         "responses": {
-          "default": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ConfigDto"
-                }
-              }
-            }
+          "200": {
+            "description": ""
           }
         },
         "summary": "Update entire configuration",
-        "tags": [
-          "config"
-        ]
-      },
-      "patch": {
-        "operationId": "ConfigController_partialUpdate",
-        "parameters": [],
-        "responses": {
-          "default": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ConfigDto"
-                }
-              }
-            }
-          }
-        },
-        "summary": "Partially update configuration",
         "tags": [
           "config"
         ]
@@ -90,15 +56,8 @@
         "operationId": "ConfigController_resetConfig",
         "parameters": [],
         "responses": {
-          "default": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ConfigDto"
-                }
-              }
-            }
+          "200": {
+            "description": ""
           }
         },
         "summary": "Reset configuration to defaults",
@@ -147,6 +106,29 @@
           }
         }
       },
+      "BlockchainConfigDto": {
+        "type": "object",
+        "properties": {
+          "chainId": {
+            "type": "number",
+            "description": "Chain ID",
+            "enum": [
+              1,
+              8453,
+              42161,
+              11155111
+            ],
+            "example": 8453
+          },
+          "rpcUrl": {
+            "type": "string",
+            "description": "RPC URL"
+          }
+        },
+        "required": [
+          "chainId"
+        ]
+      },
       "ConfigDto": {
         "type": "object",
         "properties": {
@@ -155,6 +137,14 @@
             "allOf": [
               {
                 "$ref": "#/components/schemas/LlmConfigDto"
+              }
+            ]
+          },
+          "blockchain": {
+            "description": "Blockchain configuration",
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/BlockchainConfigDto"
               }
             ]
           }
